# a2amarketplace

./: .gitignore  README.md  docker-compose.yml
a2abackend/: README.md  env.example  pyproject.toml  simulate_iot_data.py  start_all_agents.sh  test_carbon_credit_agent.py  test_hedera_direct.py  test_payment_agent.py  test_single_hedera.py
a2abackend/agents/carbon_credit_agent/: README.md  __main__.py  agent.py  task_manager.py
a2abackend/agents/greeting_agent/: agent.py
a2abackend/agents/hedera_payment_agent/: README.md  env.example  package-lock.json  package.json
a2abackend/agents/hedera_payment_agent/src/: index.ts
a2abackend/agents/host_agent/: orchestrator.py
a2abackend/agents/iot_carbon_agent/: __init__.py  __main__.py  agent.py  task_manager.py
a2abackend/agents/movie_search_agent/: README.md  env.example  package-lock.json  package.json
a2abackend/agents/movie_search_agent/src/: genkit.ts  index.ts  simple-agent.ts  tools.ts
a2abackend/agents/payment_agent/: README.md  __main__.py  agent.py  task_manager.py  test_payment_agent.py
a2abackend/agents/prebooking_agent/: __init__.py  __main__.py  agent.py  task_manager.py
a2abackend/agents/tell_time_agent/: agent.py
a2abackend/agents/wallet_balance_agent/: README.md  __main__.py  agent.py  task_manager.py
a2abackend/app/cmd/: cmd.py
a2abackend/utilities/: discovery.py  network_rpc.py
a2abackend/utilities/carbon_marketplace/: db.py  purchase.py  schema.sql  seed.py
assets/: README.md
iot_carbon_sequestration/creator/src/: main.cpp  secrets.h
web/: CARBON_CREDIT_AGENT.md  README.md
(+14 files in other folders)
